[package]
name = "rcre"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = "0.7.3"
cortex-m-rt = "0.6.15"
cortex-m-rtic = "0.5.9"
panic-halt = "0.2.0"
rtt-target = { version = "0.3.1", features = ["cortex-m"] }
stm32f3 = { version = "0.14.0", features = [ "stm32f303" ] }
stm32f3-discovery = { path = "../stm32f3-discovery" }
usb-device = "0.2.8"
usbd-serial = "0.1.1"
